# LWanAndroid

./: .gitignore  AGENTS.md  README.md  UPGRADE_PROGRESS.md  build.gradle.kts  gradle.properties  settings.gradle.kts  version.gradle
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
buildSrc/: build.gradle  build.gradle.kts  settings.gradle
buildSrc/src/main/kotlin/: VersionConfig.kt
commonlib/: build.gradle.kts
commonlib/src/main/: AndroidManifest.xml
gradle-plugin/plugin/: build.gradle.kts
gradle-plugin/skin-plugin/: build.gradle  build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
jetpacklib/: build.gradle.kts
jetpacklib/src/main/: AndroidManifest.xml
localMaven/LWanAndroid/gradle-plugin/plugin/: maven-metadata.xml  maven-metadata.xml.md5  (+3 more)
module_ai/: build.gradle.kts  consumer-rules.pro
module_ai/src/main/cpp/: CMakeLists.txt  ai_chat.cpp  logging.h
module_base/: build.gradle.kts
module_base/src/main/: AndroidManifest.xml
module_core/: build.gradle.kts
module_core/src/main/: AndroidManifest.xml
module_core/src/moduledebug/: AndroidManifest.xml
module_func/func_language/: build.gradle.kts
module_func/func_skin/: build.gradle.kts
plugin/: build.gradle.kts
skills/android-images-to-webp/: SKILL.md
skills/android-images-to-webp/agents/: openai.yaml
skills/android-images-to-webp/scripts/: convert_android_images_to_webp.py
skills/project-upgrade/: SKILL.md
skills/project-upgrade/agents/: openai.yaml
skills/project-upgrade/references/: lwanandroid-upgrade-audit.md
skin/skin-dark/: build.gradle.kts
skin/skin-green/: build.gradle.kts
skin/skin-yellow/: build.gradle.kts
(+446 files in other folders)
